[tool.poetry]
name = "fastapi-simple-login"
version = "0.1.0"
description = "A fastapi simple user and login manager."
authors = ["Thibaut Frain <thibaut.frain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.20"
psycopg2 = "^2.8.6"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
